syntax = "proto3";

package org.marionette.proto;

import "google/protobuf/empty.proto";

option java_multiple_files = true;

message NodeEvent {
  int32 id = 1;
  int32 nodeId = 2;
  repeated bytes value = 3;
}

message NodeField {
  int32 id = 1;
  bytes value = 2;
}

message InsertAction {
  int32 index = 1;
  string type = 2;
  int32 nodeId = 3;
}

message RemoveAction {
  int32 index = 1;
  int32 count = 2;
}

message MoveAction {
  int32 from = 1;
  int32 to = 2;
  int32 count = 3;
}

message NodeAction {
  oneof kind {
    InsertAction insert = 3;
    RemoveAction remove = 4;
    MoveAction move = 5;
  }
}

message NodeUpdate {
  int32 nodeId = 1;
  repeated NodeField data = 2;
  repeated NodeAction childAction = 3;
}

message NodeUpdateList {
  repeated NodeUpdate update = 1;
}

message Headers {
  repeated bytes header = 1;
}

message MethodCall {
  string name = 1;
  Headers headers = 2;
}

message CloseSignal {
  int32 code = 1;
  Headers headers = 2;
}

message RpcMessage {
  int32 requestId = 1;
  oneof body {
    MethodCall startCall = 2;
    Headers headers = 3;
    int32 fetch = 4;
    bytes data = 5;
    google.protobuf.Empty halfClose = 6;
    CloseSignal close = 7;
  }
}

message Message {
  oneof channel {
    NodeUpdateList update = 1;
    NodeEvent event = 2;
    RpcMessage rpc = 3;
  }
}
